# Harris3DSrouce

./: 100,313,262,298,961  CMakeCache.txt  CMakeLists.txt  Distance.h  Harris3DSrouce  Harris3DSrouce.cbp  HarrisDetector.cpp  HarrisDetector.h  Makefile  Vertex.cpp  Vertex.h  cmake_install.cmake  example.prop  main.cpp  util.cpp  wt_teapot.int  wt_teapot.off
DVS/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Harris3DSrouce.sln  Harris3DSrouce.vcxproj  Harris3DSrouce.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  packages.config  wt_teapot.int  wt_teapot.off
DVS/Debug/: Harris3DSrouce.ilk
DVS/Harris3DSrouce.dir/Debug/Harris3DSrouce.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Harris3DSrouce.lastbuildstate  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DVS/Harris3DSrouce.dir/Release/Harris3DSrouce.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
DVS/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog
DVS/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.read.1.tlog  custombuild.write.1.tlog
